+little fix for validation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <input class="search-input" type="text" name="repo">
         <button class="search-button" type="submit" disabled>Search</button>
-        <p class="repo-error">Поле не должно быть пустым</p>
+        <p class="repo-error">Need more than 1 character</p>
       </form>
 
       <div class="results">
